.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: devops-deployment
spec:
  selector:
    matchLabels:
      app: devops
      aula: "03"
  template:
    metadata:
      labels:
        app: devops
        aula: "03"
    spec:
      containers:
        - name: app
          image: leandrorolim/devops
          ports:
            - containerPort: 80
