.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: devops
    aula: "03"
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30500
